--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^5.0.0",
     "sass-loader": "10.1.1",
     "vue": "^3.0.0",
+    "vue-disable-autocomplete": "^0.0.4",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
